[CMakeLists.txt] Build shared library; [src/common{.h,.c}] Resolve linker error by using `extern` (in the header) and providing the storage in one place (the implementation)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_C_STANDARD 90)
 set(CMAKE_C_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN YES)
 
-option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)
+option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
 if (BUILD_SHARED_LIBS)
     set(LIBRARY_TYPE_FLAG "SHARED")
 else ()
