[README.md] Reflect C89 and MSVC support; give CMake tutorial; [src/CMakeLists.txt] Rename exec and lib to reflect README; [src/waxc.c] Use `EXIT_SUCCESS` as inverse to my earlier `EXIT_FAILURE`

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(EXEC_NAME "wax")
-set(LIBRARY_NAME "waxl")
+set(EXEC_NAME "waxc")
+set(LIBRARY_NAME "wax")  # gets renamed to "libwax"
 
 set(Header_Files
         "common.h"
